Fix user name work wrapping

--- a/client/src/app/shared/shared-actor-image-edit/actor-avatar-edit.component.scss
+++ b/client/src/app/shared/shared-actor-image-edit/actor-avatar-edit.component.scss
@@ -13,6 +13,8 @@
     flex-direction: column;
 
     .actor-info-display-name {
+      @include peertube-word-wrap;
+
       font-size: 20px;
       font-weight: $font-bold;
 
